--- a/static/html/download.html
+++ b/static/html/download.html
@@ -14,7 +14,7 @@
 <main>
     <h2>Скачать клиент игры</h2>
     <p>Последняя версия City Server для Windows.</p>
-    <a class="download-button" href="/static/downloads/city-server-latest.zip" download>Скачать клиент</a>
+    <a class="download-button" href="" download>Скачать клиент</a>
 </main>
 
 <footer>
@@ -22,6 +22,8 @@
 </footer>
 
 <script src="/static/js/header-loader.js"></script>
+<script src="/static/js/download-page.js"></script>
+
 
 </body>
 </html>
